--- a/ViktorNilsson/AdventOfCode/AdventOfCode.csproj
+++ b/ViktorNilsson/AdventOfCode/AdventOfCode.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.Platforms" Version="5.0.0" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
   </ItemGroup>
 
